--- a/src/Config/default.ini
+++ b/src/Config/default.ini
@@ -14,14 +14,14 @@ CACHE = FALSE
 PACKAGE = 
 
 [CONF.services]
-cookie = Dduers\F3App\Service\CookieService
-cache = Dduers\F3App\Service\CacheService
-database = Dduers\F3App\Service\DatabaseService
-mail = Dduers\F3App\Service\MailService
-log = Dduers\F3App\Service\LogService
-input = Dduers\F3App\Service\InputService
-session = Dduers\F3App\Service\SessionService
-response = Dduers\F3App\Service\ResponseService
+cookie = WildtierSchweiz\F3App\Service\CookieService
+cache = WildtierSchweiz\F3App\Service\CacheService
+database = WildtierSchweiz\F3App\Service\DatabaseService
+mail = WildtierSchweiz\F3App\Service\MailService
+log = WildtierSchweiz\F3App\Service\LogService
+input = WildtierSchweiz\F3App\Service\InputService
+session = WildtierSchweiz\F3App\Service\SessionService
+response = WildtierSchweiz\F3App\Service\ResponseService
 
 [CONF.mail]
 enable = 0
