--- a/src/Config/default.ini
+++ b/src/Config/default.ini
@@ -13,7 +13,7 @@ ONERROR =
 CACHE = FALSE
 PACKAGE = 
 
-[CONF.services]
+[CONF._services]
 cookie = WildtierSchweiz\F3App\Service\CookieService
 cache = WildtierSchweiz\F3App\Service\CacheService
 database = WildtierSchweiz\F3App\Service\DatabaseService
