--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     "license": "MIT",
     "authors": [{
         "name": "Daniel Duersteler",
-        "email": "daniel.duersteler@gmail.com",
+        "email": "daniel.duersteler@wildtier.ch",
         "homepage": "https://www.wildtier.ch",
         "role": "Developer"
     }],
