added location service

--- a/src/Config/default.ini
+++ b/src/Config/default.ini
@@ -74,9 +74,11 @@ sanitizer.exclude = password,password_verify
 enable = 0
 
 [CONF.log]
+enable = 0
 file = log.txt
 
 [CONF.cookie]
+enable = 0
 options.lifetime = 
 options.path = 
 options.domain = 
@@ -89,6 +91,11 @@ options.lifetime = 60
 options.secret = 'öjhefwn/&()/&HIJFIOENFIOEN()*Zuio)(*'
 
 [CONF.response]
+
+[CONF.location]
+enable = 0
+storage = SESSION.location
+defaultlocation = CH
 
 [CONF.frontend]
 url = 
