added location service

--- a/src/Config/default.ini
+++ b/src/Config/default.ini
@@ -47,6 +47,7 @@ port = 3306
 folder = ../database/jig/
 
 [CONF.session]
+enable = 0
 ; cache | sql | mongo | jig | empty for default php session
 engine = 
 name = PHPSESSID
@@ -65,6 +66,7 @@ options.httponly =
 options.samesite = 
 
 [CONF.input]
+enable = 0
 sanitizer.enable = 0
 ; clean | encode
 sanitizer.method = clean
@@ -87,18 +89,17 @@ options.httponly = true
 options.samesite = Strict
 
 [CONF.jwt]
+enable = 0
 options.lifetime = 60
 options.secret = 'öjhefwn/&()/&HIJFIOENFIOEN()*Zuio)(*'
 
 [CONF.response]
+enable = 0
 
 [CONF.location]
 enable = 0
 storage = SESSION.location
 defaultlocation = CH
-
-[CONF.frontend]
-url = 
 
 [routes]
 
