--- a/src/Config/default.ini
+++ b/src/Config/default.ini
@@ -22,6 +22,8 @@ log = WildtierSchweiz\F3App\Service\LogService
 input = WildtierSchweiz\F3App\Service\InputService
 session = WildtierSchweiz\F3App\Service\SessionService
 response = WildtierSchweiz\F3App\Service\ResponseService
+location = WildtierSchweiz\F3App\Service\Location
+googlerecaptcha = WildtierSchweiz\F3App\Service\GoogleRecaptchaService
 
 [CONF.mail]
 enable = 0
@@ -100,6 +102,13 @@ enable = 0
 enable = 0
 storage = SESSION.location
 defaultlocation = CH
+
+[CONF.googlerecaptcha]
+enable = 0
+websitekey = 
+secretkey = 
+scorethreshold = 0.5
+apiurl = https://www.google.com/recaptcha/api/siteverify
 
 [routes]
 
