fixed default config

--- a/src/Config/default.ini
+++ b/src/Config/default.ini
@@ -22,7 +22,7 @@ log = WildtierSchweiz\F3App\Service\LogService
 input = WildtierSchweiz\F3App\Service\InputService
 session = WildtierSchweiz\F3App\Service\SessionService
 response = WildtierSchweiz\F3App\Service\ResponseService
-location = WildtierSchweiz\F3App\Service\Location
+location = WildtierSchweiz\F3App\Service\LocationService
 googlerecaptcha = WildtierSchweiz\F3App\Service\GoogleRecaptchaService
 
 [CONF.mail]
