updated default config

--- a/src/Config/default.ini
+++ b/src/Config/default.ini
@@ -13,6 +13,9 @@ ONERROR =
 CACHE = FALSE
 PACKAGE = 
 
+[application]
+sourcedir = ../src/
+
 [CONF._services]
 cookie = WildtierSchweiz\F3App\Service\CookieService
 cache = WildtierSchweiz\F3App\Service\CacheService
