updated language service

--- a/src/Config/default.ini
+++ b/src/Config/default.ini
@@ -27,6 +27,7 @@ session = WildtierSchweiz\F3App\Service\SessionService
 response = WildtierSchweiz\F3App\Service\ResponseService
 location = WildtierSchweiz\F3App\Service\LocationService
 googlerecaptcha = WildtierSchweiz\F3App\Service\GoogleRecaptchaService
+language = WildtierSchweiz\F3App\Service\LanguageService
 
 [CONF.mail]
 enable = 0
@@ -112,6 +113,11 @@ websitekey =
 secretkey = 
 scorethreshold = 0.5
 apiurl = https://www.google.com/recaptcha/api/siteverify
+
+[CONF.language]
+enable = 0
+dictionaryfilefilter = /(?i:^.*\.(ini)$)/m,
+sourcefilefilter = /(?i:^.*\.(php|htm|html)$)/m,
 
 [routes]
 
