updated f3app base controller

--- a/src/Config/default.ini
+++ b/src/Config/default.ini
@@ -27,7 +27,7 @@ session = WildtierSchweiz\F3App\Service\SessionService
 response = WildtierSchweiz\F3App\Service\ResponseService
 location = WildtierSchweiz\F3App\Service\LocationService
 googlerecaptcha = WildtierSchweiz\F3App\Service\GoogleRecaptchaService
-language = WildtierSchweiz\F3App\Service\LanguageService
+language = WildtierSchweiz\F3App\Service\LanguageService,1
 
 [CONF.mail]
 enable = 0
