updated default config

--- a/src/Config/default.ini
+++ b/src/Config/default.ini
@@ -116,8 +116,8 @@ apiurl = https://www.google.com/recaptcha/api/siteverify
 
 [CONF.language]
 enable = 0
-dictionaryfilefilter = /(?i:^.*\.(ini)$)/m,
-sourcefilefilter = /(?i:^.*\.(php|htm|html)$)/m,
+dictionaryfilefilter = /(?i:^.*\.(ini)$)/m
+sourcefilefilter = /(?i:^.*\.(php|htm|html)$)/m
 
 [routes]
 
