--- a/src/Config/default.ini
+++ b/src/Config/default.ini
@@ -7,6 +7,7 @@ LOCALES = ../dict/
 TEMP = ../var/temp/
 LOGS = ../var/log/
 UPLOADS = ../var/upload/
+; by composer
 ;AUTOLOAD = ../src/
 FALLBACK = en
 ONERROR = 
