--- a/dict/services.ini
+++ b/dict/services.ini
@@ -1,9 +1,16 @@
 [language]
-title = application
-subtitle = Languages
+title = Application
+subtitle = Language Dictionaries
 value = Value
 key = Key
 prefix = Prefix
-reallydeletekey = Do your want to delete this key?
+reallydeletekey = Do you want to delete this key?
+reallydeletedictionary = Do you want to delete this dictionary?
+reallydeletedictionarycheckbox = Really delete
 cancel = Cancel
 checkusage = Check usage
+language = Language
+addkey = Add key
+createdictionary = Create language dictionary
+secionmissing = A section name must be given.
+mendatoryfieldmissing = At least one mendatory field is missing.
