updated language service to handle seo routing

--- a/config/default.ini
+++ b/config/default.ini
@@ -119,6 +119,9 @@ apiurl = https://www.google.com/recaptcha/api/siteverify
 enable = 0
 dictionaryfilefilter = /(?i:^.*\.(ini)$)/m
 sourcefilefilter = /(?i:^.*\.(php|htm|html)$)/m
+language_routing_param_name = PARAMS.lang
+page_routing_param_name = PARAMS.page
+page_default = home
 
 [routes]
 
