updated language service

--- a/config/default.ini
+++ b/config/default.ini
@@ -122,6 +122,7 @@ sourcefilefilter = /(?i:^.*\.(php|htm|html)$)/m
 language_routing_param_name = PARAMS.lang
 page_routing_param_name = PARAMS.page
 page_default = home
+dictionarysoftdelete = 1
 
 [routes]
 
