--- a/dict/services.ini
+++ b/dict/services.ini
@@ -14,3 +14,5 @@ addkey = Add key
 createdictionary = Create language dictionary
 secionmissing = A section name must be given.
 mendatoryfieldmissing = At least one mendatory field is missing.
+editkeyeverylanguage = Edit key name in every language dictionary.
+keyexists = This key already exists.
