--- a/composer.json
+++ b/composer.json
@@ -2,9 +2,15 @@
     "name": "wildtierschweiz/f3-app",
     "description": "Secure boilerplate for a fat-free framework (f3) web app",
     "type": "library",
+    "repositories": [
+    {
+      "type": "vcs",
+      "url": "https://github.com/wildtierschweiz/fatfree-core-smtplinelimit"
+    }
+  ],
     "require": {
         "php": ">=8.1",
-        "bcosca/fatfree-core": "^3.8"
+        "bcosca/fatfree-core": "dev-smtplinelimit"
     },
     "license": "MIT",
     "authors": [{
