--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
     "require": {
         "php": ">=8.1",
-        "bcosca/fatfree-core": "dev-smtplinelimit#<7d9650f>"
+        "bcosca/fatfree-core": "dev-smtplinelimit"
     },
     "license": "MIT",
     "authors": [{
